Fix wrapping in info section
Began fixing the wrapping issue in the info section by giving info-card
a width of 150px and implementing flex-wrap: wrap where appropriate

--- a/style.css
+++ b/style.css
@@ -93,12 +93,14 @@ a, .secondary-hero-text{
 
 .info-image{
     width: 150px;
+    min-width: 50px;
     border-radius: 20px;
 }
 
 .info-card-container{
     display: flex;
-    gap: 1px;
+    gap: 10px;
+    flex-wrap: wrap;
 }
 
 .info-card{
@@ -106,6 +108,8 @@ a, .secondary-hero-text{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    text-wrap: balance;
+    width: 150px;
 }
 
 .quote-container{
